--- a/jogos/jogos.html
+++ b/jogos/jogos.html
@@ -24,7 +24,7 @@
   <hr><br>
 
   <div class="wrap1">
-    <a href="../web.html" style="color: black;">
+    <a href="../index.html" style="color: black;">
       <button class="button">Ir para Home</button>
     </a>
   </div>
